query-compiler/query-compiler/tests/snapshots/queries__queries@query-non-unique-one2m-pagination.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/query-non-unique-one2m-pagination.json
snapshot_kind: text
---
rawNestedRead (query «SELECT "public"."User"."id", "public"."User"."email",
                      "public"."User"."role"::text FROM "public"."User" WHERE
                      "public"."User"."id" = $1 OFFSET $2»
               params [const(BigInt(1)), const(BigInt(0))]
               fields {
                   id: 0
                   email: 1
                   role: 2
               }
               relations [posts on left.0 = right.1 many (query «SELECT
                                                                 "public"."Post"."id",
                                                                 "public"."Post"."userId"
                                                                 FROM
                                                                 "public"."Post"
                                                                 WHERE
                                                                 "public"."Post"."userId"
                                                                 IN [$1,*] ORDER
                                                                 BY
                                                                 "public"."Post"."id"
                                                                 ASC OFFSET $2»
                                                          params [var(@parent$id as Int),
                                                                  const(BigInt(0))]
                                                          fields {
                                                              id: 0
                                                          })])
enums {
    Role: {
        admin: ADMIN
        user: USER
    }
}
