query-compiler/query-compiler/tests/snapshots/queries__queries@query-one2m-pagination.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/query-one2m-pagination.json
snapshot_kind: text
---
rawNestedRead (query «SELECT "public"."Post"."id", "public"."Post"."title",
                      "public"."Post"."userId" FROM "public"."Post" WHERE 1=1
                      OFFSET $1»
               params [const(BigInt(0))]
               fields {
                   id: 0
                   title: 1
                   userId: 2
               }
               relations [categories on left.0 = right.2 many (query «SELECT
                                                                      "public"."Category"."id",
                                                                      "public"."Category"."name",
                                                                      "t0"."B"
                                                                      AS
                                                                      "CategoryToPost@Post"
                                                                      FROM
                                                                      "public"."Category"
                                                                      INNER JOIN
                                                                      "public"."_CategoryToPost"
                                                                      AS "t0" ON
                                                                      "t0"."A" =
                                                                      "public"."Category"."id"
                                                                      WHERE
                                                                      ("public"."Category"."id"
                                                                      >= (SELECT
                                                                      "public"."Category"."id"
                                                                      FROM
                                                                      "public"."Category"
                                                                      WHERE
                                                                      ("public"."Category"."id")
                                                                      = ($1))
                                                                      AND
                                                                      "t0"."B"
                                                                      IN [$2,*])
                                                                      ORDER BY
                                                                      "public"."Category"."id"
                                                                      ASC OFFSET
                                                                      $3»
                                                               params [const(BigInt(1)),
                                                                       var(@parent$id as Int),
                                                                       const(BigInt(0))]
                                                               fields {
                                                                   id: 0
                                                                   name: 1
                                                               })])
