query-compiler/query-compiler/tests/snapshots/queries__queries@update-connect.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/update-connect.json
snapshot_kind: text
---
transaction
   dataMap {
       id: Int (id)
       email: String (email)
       role: Enum<Role> (role)
       posts (from @nested$posts): {
           id: Int (id)
           title: String (title)
           userId: Int (userId)
       }
   }
   enums {
       Role: {
           admin: ADMIN
           user: USER
       }
   }
   let 0 = unique (query «SELECT "public"."User"."id" FROM "public"."User" WHERE
                          ("public"."User"."email" = $1 AND 1=1) LIMIT $2 OFFSET
                          $3»
                   params [const(String("user.1737556028164@prisma.io")),
                           const(BigInt(1)), const(BigInt(0))])
   in let 0 = unique (validate (get 0)
          [ rowCountNeq 0
          ] orRaise "MISSING_RELATED_RECORD");
          0$id = mapField id (get 0)
      in let 1 = execute «UPDATE "public"."Post" SET "userId" = $1 WHERE
                          ("public"."Post"."id" = $2 AND 1=1)»
                 params [var(0$id as Int), const(BigInt(11))]
         in validate (get 1)
            [ affectedRowCountEq 1
            ] orRaise "INCOMPLETE_CONNECT_OUTPUT";
            ();
      let 0 = unique (validate (get 0)
          [ rowCountNeq 0
          ] orRaise "MISSING_RECORD");
          0$id = mapField id (get 0)
      in let @parent = unique (query «SELECT "public"."User"."id",
                                      "public"."User"."email",
                                      "public"."User"."role"::text FROM
                                      "public"."User" WHERE "public"."User"."id"
                                      = $1 LIMIT $2 OFFSET $3»
                               params [var(0$id as Int), const(BigInt(1)),
                                       const(BigInt(0))])
         in let @parent$id = mapField id (get @parent)
            in join (get @parent)
               with (query «SELECT "public"."Post"."id",
                            "public"."Post"."title", "public"."Post"."userId"
                            FROM "public"."Post" WHERE "public"."Post"."userId"
                            = $1 OFFSET $2»
                     params [var(@parent$id as Int),
                             const(BigInt(0))]) on left.(id) = right.(userId) as @nested$posts
