query-compiler/query-compiler/tests/snapshots/queries__queries@update-set-nested.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/update-set-nested.json
snapshot_kind: text
---
transaction
   dataMap {
       id: Int (id)
       email: String (email)
       role: Enum<Role> (role)
       posts (from @nested$posts): {
           id: Int (id)
           title: String (title)
           userId: Int (userId)
       }
   }
   enums {
       Role: {
           admin: ADMIN
           user: USER
       }
   }
   let 0 = unique (query «SELECT "public"."User"."id" FROM "public"."User" WHERE
                          "public"."User"."email" = $1 LIMIT $2 OFFSET $3»
                   params [const(String("user.1737556028164@prisma.io")),
                           const(BigInt(1)), const(BigInt(0))])
   in let 0$id = mapField id (get 0)
      in let 1 = query «SELECT "public"."Post"."id", "public"."Post"."userId"
                        FROM "public"."Post" WHERE (1=1 AND
                        "public"."Post"."userId" IN [$1,*]) OFFSET $2»
                 params [var(0$id as Int), const(BigInt(0))]
         in let 2 = query «SELECT "public"."Post"."id" FROM "public"."Post"
                           WHERE ("public"."Post"."id" = $1 OR
                           "public"."Post"."id" = $2) OFFSET $3»
                    params [const(BigInt(11)), const(BigInt(12)),
                            const(BigInt(0))]
            in let 3 = diff (get 2) (get 1)
               in if (rowCountNeq 0 (get 3))
                  then let 3$id = mapField id (get 3)
                       in validate (get 0)
                          [ rowCountNeq 0
                          ] orRaise "MISSING_RELATED_RECORD";
                          execute «UPDATE "public"."Post" SET "userId" = $1
                                   WHERE ("public"."Post"."id" IN [$2,*] AND
                                   1=1)»
                          params [var(0$id as Int), var(3$id as Int)]
                  else ();
                  validate (diff (get 1) (get 2))
                  [ rowCountEq 0
                  ] orRaise "RELATION_VIOLATION";
      let 0 = unique (validate (get 0)
          [ rowCountNeq 0
          ] orRaise "MISSING_RECORD");
          0$id = mapField id (get 0)
      in rawNestedReadUnique (query «SELECT "public"."User"."id",
                                     "public"."User"."email",
                                     "public"."User"."role"::text FROM
                                     "public"."User" WHERE "public"."User"."id"
                                     = $1 LIMIT $2 OFFSET $3»
                              params [var(0$id as Int), const(BigInt(1)),
                                      const(BigInt(0))]
                              fields {
                                  id: 0
                                  email: 1
                                  role: 2
                              }
                              relations [posts on left.0 = right.2 many (query
                                                                         «SELECT
                                                                          "public"."Post"."id",
                                                                          "public"."Post"."title",
                                                                          "public"."Post"."userId"
                                                                          FROM
                                                                          "public"."Post"
                                                                          WHERE
                                                                          "public"."Post"."userId"
                                                                          = $1
                                                                          OFFSET
                                                                          $2»
                                                                         params [var(@parent$id as Int),
                                                                                 const(BigInt(0))]
                                                                         fields {
                                                                             id: 0
                                                                             title: 1
                                                                             userId: 2
                                                                         })])
         enums {
             Role: {
                 admin: ADMIN
                 user: USER
             }
         }
